Upgrading to JDK 11, vertx 3.6.0, Hazelcast 3.11, phusion baseimage 0.11, repair tests